--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,10 @@ SiteUptime/.idea/codeStyles/codeStyleConfig.xml
 SiteUptime/.idea/codeStyles/Project.xml
 SiteUptime/.idea/dictionaries/Derek_S.xml
 TestCode/*
+mergeExcel/hb.xlsx
+mergeExcel/test1.xlsx
+mergeExcel/test2.xlsx
+mergeExcel/test3.xlsx
+SiteUptime/2018-04-16_log.txt
+SiteUptime/content
+mergeExcel.7z
